# ocr-bench

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
apps/api/: __init__.py  api.py  schemas.py
apps/gradio/: app.py
docker/: Dockerfile
ocrbench/: __init__.py
ocrbench/benchmark/: __init__.py  alpr_pipeline.py  pipeline.py
ocrbench/configs/: config.yaml
ocrbench/core/: __init__.py  config.py  datatypes.py  interfaces.py
ocrbench/datasets/: __init__.py  base.py  ccpd.py  registry.py  ufpr.py
ocrbench/detectors/: __init__.py  base.py  registry.py  rtdetr_provider.py  yolo_provider.py
ocrbench/experiments/: __init__.py  cost_tracker.py  tracker.py
ocrbench/metrics/: __init__.py  cer.py  character_accuracy.py  detection_accuracy.py  exact_match.py  iou.py  latency.py  map.py  memory.py  precision_recall_f1.py  wer.py
ocrbench/providers/: __init__.py  base.py  easyocr_provider.py  paddleocr_provider.py  rapidocr_provider.py  registry.py  tesseract_provider.py  trocr_provider.py
ocrbench/recommendation/: __init__.py  engine.py  profiles.py
ocrbench/reports/: __init__.py  csv.py  export.py  json.py  markdown.py  pdf.py
ocrbench/training/: __init__.py  trainer.py
scripts/: download_datasets.py  generate_samples.py  ocrbench_cli.py  run_benchmark.py
tests/: test_metrics.py
