[project]
name = "ocrbench"
version = "1.0.0"
description = "Open-source OCR benchmarking platform for license plate recognition"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "OCR-Bench Contributors"}
]
keywords = ["ocr", "benchmarking", "alpr", "yolo", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "mlflow>=2.10.0",
    "gradio>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pytesseract>=0.3.10",
    "paddleocr>=2.7.0",
    "easyocr>=1.7.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "ultralytics>=8.0.0",
    "reportlab>=4.0.0",
    "pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "rapidocr-onnxruntime>=0.1.0",
    "surya-ocr>=0.4.0",
    "psutil>=5.9.0",
    "editdistance>=0.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
    "types-Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ocrbench*", "apps*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
